# Mangine

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  install.sh  run_tests.sh  searchman_service.cpp  uninstall.sh
.github/workflows/: run-tests.yaml
database/: Corpora.cpp  Corpora.h  Database.cpp  Database.h  Search.h
embedding/: Pipeline.h  endpoint.py  entrypoint.sh  log_conf.yaml
include/: json.hpp  mailbox.h
indexer/: Chunk.cpp  Chunk.h  Document.h  Indexer.cpp  Indexer.h  Man.cpp  Man.h
pipeline/: BM25.h  Pipeline.cpp  Pipeline.h  TextProcessor.cpp  TextProcessor.h
scripts/: install.sh
service/: Request.cpp  Request.h
src/database/: Corpora.h  Database.cpp  Database.h
src/indexer/: Indexer.h  Man.cpp  Man.h  TextProcessor.cpp
src/interface/: API.cpp  API.h  Parser.cpp  Parser.h  client.cpp  service.cpp  service.h
src/utils/: Config.h  Log.cpp  Log.h
test/: test.cpp
tests/: service_unit_tests.cpp  test_config.json  unit_tests.cpp
utils/: Config.cpp  Config.h  Log.cpp  Log.h  Man.cpp  Man.h
